# Data-Lake-QA-ISE-Challenge

./: .gitignore  README.md  kaggle_bootstrap.ipynb  kaggle_run.ipynb  pyproject.toml  submission_agent.csv  submission_ensemble.csv
dlqa/: __init__.py  agent.py  clients.py  config.py  ensemble.py  ingest.py  kaggle.py  retrieve.py  sandbox.py  schema_card.py
dlqa/eval/: run_agent.py  run_compute.py  run_ensemble.py  run_full.py  run_samples.py  scorer.py
dlqa/solve/: formatter.py  lane_compute.py  lane_extract.py  lane_perceive.py  router.py  solve.py  verifier.py
